# kuria

./: .gitignore  Cargo.toml  build.rs  config.toml.example
crates/kuria-plugin/: Cargo.toml
crates/kuria-plugin/src/: lib.rs
docs/: nginx-reverse-proxy.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  mailboxEvents.js  main.js  setupState.js
frontend/src/components/: PasswordInput.vue
frontend/src/views/: Compose.vue  Dashboard.vue  Domains.vue  EmailDetail.vue  Inbox.vue  Layout.vue  Login.vue  PluginConfig.vue  Settings.vue  Setup.vue  Users.vue
src/: config.rs  error.rs  mail_services.rs  main.rs
src/db/: api_token_queries.rs  mod.rs  models.rs  queries.rs
src/dns/: resolver.rs
src/imap/: command.rs  mailbox.rs  mod.rs  server.rs  session.rs
src/mail/: auth.rs  compose.rs  delivery.rs  mod.rs  parser.rs  queue.rs
src/plugin/: mod.rs
src/pop3/: commands.rs  mod.rs  server.rs  session.rs
src/smtp/: mod.rs  sender.rs  server.rs  session.rs
src/tls/: config.rs
src/web/: middleware.rs  mod.rs  rate_limit.rs  response.rs  router.rs
src/web/handlers/: api_token.rs  auth.rs  domain.rs  mailbox.rs  mod.rs  queue.rs  settings.rs  user.rs
